test/data/syntax-errors/print-statement-missing-semicolon.ava
ava "Hello World" // this is okay for now because one statement programs don't need a semicolon

